adlatus-ci-cd/cd/deploy/base/modules/pm-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pm-api-service
  namespace: adl
spec:
  selector:
    app: pm-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
